gobmkida/c2/show_dragons
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/show_dragons/src/engine/dragon.c:1850:6: error: use of undeclared identifier 'dword_9E8088'
v4 = dword_9E8088[v2 / 4]; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/show_dragons/src/engine/dragon.c:2130:1: error: use of undeclared identifier 'show_dragons_snames'
show_dragons_snames[dragon[i].crude_status], 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/show_dragons/src/engine/dragon.c:2131:1: error: use of undeclared identifier 'show_dragons_snames'
show_dragons_snames[dragon[i].status], 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/show_dragons/src/engine/dragon.c:2136:31: error: use of undeclared identifier 'show_dragons_snames'
gprintf( ", owl status %s\n", show_dragons_snames[dragon[i].owl_status]); 
                              ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/show_dragons/src/obj/1/dragon.o] Error 1
